add semantic tag

--- a/src/html/pages/about/flot.html
+++ b/src/html/pages/about/flot.html
@@ -8,30 +8,32 @@
         для пассажиров вне зависимости от дальности направления перелета. Планы по расширению флота предполагают его
         дальнейшее увеличение.
       </p>
-      <div class="flot__card">
-        <a href="./fleet-inner.html" class="flot__card-item">
-          <p class="flot__card-name">A330</p>
-          <div class="flot__card-img">
+      <ul class="flot__card">
+        <li class="flot__card-item">
+          <a href="./fleet-inner.html" class="flot__card-link">
+            <span class="flot__card-name">A330</span>
             <img src="./img/flot/mini-plane.png" alt="" />
-          </div>
-        </a>
-        <a href="./fleet-inner.html" class="flot__card-item">
-          <p class="flot__card-name">A330</p>
-          <div class="flot__card-img">
+          </a>
+        </li>
+        <li class="flot__card-item">
+          <a href="./fleet-inner.html" class="flot__card-link">
+            <span class="flot__card-name">A330</span>
             <img src="./img/flot/mini-plane.png" alt="" />
-          </div>
-        </a>
-        <a href="./fleet-inner.html" class="flot__card-item">
-          <p class="flot__card-name">A330</p>
-          <div class="flot__card-img">
+          </a>
+        </li>
+        <li class="flot__card-item">
+          <a href="./fleet-inner.html" class="flot__card-link">
+            <span class="flot__card-name">A330</span>
             <img src="./img/flot/mini-plane.png" alt="" />
-          </div>
-        </a>
-        <a class="flot__card-item" href="./fleet.html">
-          @@include('../../shared/long-arrow.html')
-          <p class="flot__card-name">Смотреть все</p>
-        </a>
-      </div>
+          </a>
+        </li>
+        <li class="flot__card-item">
+          <a href="./fleet.html" class="flot__card-link">
+            @@include('../../shared/long-arrow.html')
+            <span class="flot__card-name">Смотреть все</span>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
