--- a/src/html/pages/about/passenger.html
+++ b/src/html/pages/about/passenger.html
@@ -4,9 +4,7 @@
       <p class="passenger__heading">
         Сегодня Asia Union Airlines входит в ТОП-7 авиакомпаний Узбекистана по пассажироpбороту
       </p>
-      <div class="passenger__top-logo">
-        <img src="./img/icons/mini-logo.svg" alt="" />
-      </div>
+      <img src="./img/icons/mini-logo.svg" alt="" />
     </div>
     <p class="passenger__text">
       Благодаря инновационному сервису и непрерывным финансовым инвестициям компания демонстрирует темпы роста,
@@ -16,8 +14,8 @@
       <span data-count="120532">120,532</span>
       <p>Пассажиров</p>
     </div>
-    <div class="passenger__card">
-      <div class="passenger__card-item">
+    <ul class="passenger__card">
+      <li class="passenger__card-item">
         <div class="passenger__card-icon">
           <img src="./img/plane/card-plane.png" alt="" />
         </div>
@@ -26,8 +24,8 @@
           Lorem ipsum dolor sit amet consectetur. Mattis diam hendrerit gravida ornare fermentum diam. Iaculis integer
           purus et elit at volutpat. Vestibulum pretium tortor nisi dui.
         </p>
-      </div>
-      <div class="passenger__card-item">
+      </li>
+      <li class="passenger__card-item">
         <div class="passenger__card-icon">
           <img src="./img/plane/card-plane.png" alt="" />
         </div>
@@ -36,8 +34,8 @@
           Lorem ipsum dolor sit amet consectetur. Mattis diam hendrerit gravida ornare fermentum diam. Iaculis integer
           purus et elit at volutpat. Vestibulum pretium tortor nisi dui.
         </p>
-      </div>
-      <div class="passenger__card-item">
+      </li>
+      <li class="passenger__card-item">
         <div class="passenger__card-icon">
           <img src="./img/plane/card-plane.png" alt="" />
         </div>
@@ -46,7 +44,7 @@
           Lorem ipsum dolor sit amet consectetur. Mattis diam hendrerit gravida ornare fermentum diam. Iaculis integer
           purus et elit at volutpat. Vestibulum pretium tortor nisi dui.
         </p>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </section>
