--- a/src/html/pages/bagagge-inner/bagagge-type.html
+++ b/src/html/pages/bagagge-inner/bagagge-type.html
@@ -1,8 +1,8 @@
 <section class="bagagge-type">
   <div class="bagagge-type__inner container">
     <h3 class="bagagge-type__heading">Какой багаж оплачивается дополнительно?</h3>
-    <div class="bagagge-type__card">
-      <div class="bagagge-type__card-item">
+    <ul class="bagagge-type__card">
+      <li class="bagagge-type__card-item">
         <div class="bagagge-type__card-icon">
           <img src="./img/bagagge/svg.svg" alt="" />
         </div>
@@ -11,8 +11,8 @@
           Сверхнормативным багажом считаются вещи пассажира, вес и/или количество которых превышает установленную
           перевозчиком норму бесплатного провоза багажа.
         </p>
-      </div>
-      <div class="bagagge-type__card-item">
+      </li>
+      <li class="bagagge-type__card-item">
         <div class="bagagge-type__card-icon">
           <img src="./img/bagagge/svg2.svg" alt="" />
         </div>
@@ -22,7 +22,7 @@
           считается негабаритным. Тяжеловесным багажом считаются вещи пассажира, вес которых более 30, но не более 50
           килограмм.
         </p>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </section>
