--- a/src/html/pages/bagagge-inner/normal.html
+++ b/src/html/pages/bagagge-inner/normal.html
@@ -1,8 +1,8 @@
 <section class="normal">
   <div class="normal__inner container">
     <h3 class="normal__heading">Нормы провоза багажа</h3>
-    <div class="normal__wrapper">
-      <div class="normal__wrap">
+    <ul class="normal__wrapper">
+      <li class="normal__wrap">
         <p class="normal__wrap-heading">Экономический класс</p>
         <p class="normal__wrap-text">
           <span>Ручная кладь</span>
@@ -16,8 +16,8 @@
           <span>Регистрируемый багаж</span>
           <span>1 место до 10 кг</span>
         </p>
-      </div>
-      <div class="normal__wrap">
+      </li>
+      <li class="normal__wrap">
         <p class="normal__wrap-heading">бизнес класс</p>
         <p class="normal__wrap-text">
           <span>Ручная кладь</span>
@@ -31,7 +31,7 @@
           <span>Регистрируемый багаж</span>
           <span>1 место до 10 кг</span>
         </p>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </section>
