--- a/src/html/pages/food/special.html
+++ b/src/html/pages/food/special.html
@@ -5,30 +5,32 @@
       На рейсах с предоставлением гарантированного питания, предлагаем вам возможность выбора блюд из специального меню
       с учетом возроста, медицинских показаний или религиозных убеждений.
     </p>
-    <div class="special__card">
-      <div class="special__card-item">
+    <ul class="special__card">
+      <li class="special__card-item">
         <div class="special__card-icon">
           <img src="./img/food/car.svg" alt="" />
         </div>
-        <p class="special__card-desc">Питание для грудных младенцев</p>
-        <p class="special__card-info">BBML-в состав младенческого питания входит детское питание в ассортименте</p>
-      </div>
-      <div class="special__card-item">
+        <span class="special__card-desc">Питание для грудных младенцев</span>
+        <span class="special__card-info"
+          >BBML-в состав младенческого питания входит детское питание в ассортименте</span
+        >
+      </li>
+      <li class="special__card-item">
         <div class="special__card-icon">
           <img src="./img/food/family.svg" alt="" />
         </div>
-        <p class="special__card-desc">Питание для детей</p>
-        <p class="special__card-info">CHML-мягкая легко пережевываемая пища,продукты легко идентифицируются</p>
-      </div>
-      <div class="special__card-item">
+        <span class="special__card-desc">Питание для детей</span>
+        <span class="special__card-info">CHML-мягкая легко пережевываемая пища,продукты легко идентифицируются</span>
+      </li>
+      <li class="special__card-item">
         <div class="special__card-icon">
           <img src="./img/food/lanch.svg" alt="" />
         </div>
-        <p class="special__card-desc">Вегетарианское питание</p>
-        <p class="special__card-info">
+        <span class="special__card-desc">Вегетарианское питание</span>
+        <span class="special__card-info">
           VGML- строгая вегетарианская диетая.из рациона исключена животная пища, молоко и яйца
-        </p>
-      </div>
-    </div>
+        </span>
+      </li>
+    </ul>
   </div>
 </section>
