--- a/src/html/pages/tarif-inner/tarif.html
+++ b/src/html/pages/tarif-inner/tarif.html
@@ -1,8 +1,8 @@
 <section class="tarif">
   <div class="tarif__inner container">
-    <h3 class="tarif__heading">Тарифы</h3>
-    <div class="tarif__wrapper">
-      <div class="tarif__wrap">
+    <h2 class="tarif__heading">Тарифы</h2>
+    <ul class="tarif__wrapper">
+      <li class="tarif__wrap">
         <p class="tarif__wrap-heading">Лайт</p>
         <p class="tarif__wrap-text">
           <span>Ручная кладь</span>
@@ -43,8 +43,8 @@
           <span>Перевозка несопровождаемых детей</span>
           <span>Платно</span>
         </p>
-      </div>
-      <div class="tarif__wrap">
+      </li>
+      <li class="tarif__wrap">
         <p class="tarif__wrap-heading">Эконом</p>
         <p class="tarif__wrap-text">
           <span>Ручная кладь</span>
@@ -85,8 +85,8 @@
           <span>Перевозка несопровождаемых детей</span>
           <span>Платно</span>
         </p>
-      </div>
-      <div class="tarif__wrap">
+      </li>
+      <li class="tarif__wrap">
         <p class="tarif__wrap-heading">стандарт</p>
         <p class="tarif__wrap-text">
           <span>Ручная кладь</span>
@@ -127,7 +127,7 @@
           <span>Перевозка несопровождаемых детей</span>
           <span>Платно</span>
         </p>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </section>
