--- a/src/html/sections/feature.html
+++ b/src/html/sections/feature.html
@@ -5,7 +5,7 @@
         <img src="./img/feature/img.jpg" alt="" />
       </div>
       <div class="feature__mid">
-        <img src="./img/feature/plane.jpg" alt="">
+        <img src="./img/feature/plane.jpg" alt="" />
       </div>
       <div class="feature__right">
         <h2 class="feature__title">Мы обьеденяем будующее</h2>
@@ -20,10 +20,10 @@
             вашего путешествия. Добро пожаловать на рейсы AsianUnion Airlines. С уважением, команда AsianUnion Airlines.
           </p>
         </div>
-        <a class="feature__more">
+        <a href="./about.html" class="feature__more">
           <p>Подробнее</p>
           <span>
-            <img src="../../img/feature/more-arrow.svg" alt="" />
+            <img src="./img/feature/more-arrow.svg" alt="" />
           </span>
         </a>
       </div>
