--- a/src/html/sections/info.html
+++ b/src/html/sections/info.html
@@ -1,32 +1,33 @@
 <section class="info">
   <div class="info__inner container">
     <div class="info__block">
-      <div class="info__left">
-        <p class="info__left-heading">Полезная информация</p>
-      </div>
-      <div class="info__right">
-        <div class="info__right-card">
-          <a href="./service.html" class="info__right-link"></a>
-          <div class="info__right-icon">
-            <img src="./img/info/service.svg" alt="" />
-          </div>
-          <p class="info__right-text">Услуги</p>
-        </div>
-        <div class="info__right-card">
-          <a href="./food.html" class="info__right-link"></a>
-          <div class="info__right-icon">
-            <img src="./img/info/fork.svg" alt="" />
-          </div>
-          <p class="info__right-text">Питание</p>
-        </div>
-        <div class="info__right-card">
-          <a href="#!" class="info__right-link"></a>
-          <div class="info__right-icon">
-            <img src="./img/info/location.svg" alt="" />
-          </div>
-          <p class="info__right-text">Карта полетов</p>
-        </div>
-      </div>
+      <h2 class="info__heading">Полезная информация</h2>
+      <ul class="info__right">
+        <li class="info__right-card">
+          <a href="./service.html" class="info__right-link">            
+            <div class="info__right-icon">
+              <img src="./img/info/service.svg" alt="" />
+            </div>
+            <span class="info__right-text">Услуги</span>
+          </a>
+        </li>
+        <li class="info__right-card">
+          <a href="./food.html" class="info__right-link">            
+            <div class="info__right-icon">
+              <img src="./img/info/fork.svg" alt="" />
+            </div>
+            <span class="info__right-text">Питание</span>
+          </a>
+        </li>
+        <li class="info__right-card">
+          <a href="#!" class="info__right-link">            
+            <div class="info__right-icon">
+              <img src="./img/info/location.svg" alt="" />
+            </div>
+            <span class="info__right-text">Карта полетов</span>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
