--- a/src/html/sections/intro.html
+++ b/src/html/sections/intro.html
@@ -3,21 +3,21 @@
     <img src="./img/intro/bg.jpg" alt="" />
   </div>
   <div class="intro__inner container">
-    <div class="intro__title">Uniting the future</div>
+    <h1 class="intro__title">Uniting the future</h1>
     <div class="intro__block">
       <div class="intro__block-left">
         <p class="intro__block-heading">ASIA UNION AIRLINES <span>АВИАКОМПАНИЯ КОТОРОЙ ВЫ МОЖЕТЕ ДОВЕРЯТЬ</span></p>
         <p class="intro__block-text">Lorem ipsum dolor sit amet consectetur. Suspendisse lorem aenean a sed nibh.</p>
         <div class="intro__block-bottom">
           <div class="intro__block-navigation">
-            <div class="intro__block-navigation-prev swiper-button-prev">
+            <button class="intro__block-navigation-prev swiper-button-prev">
               @@include('../shared/navigationArrow.html')
-            </div>
-            <div class="intro__block-navigation-next swiper-button-next">
+            </button>
+            <button class="intro__block-navigation-next swiper-button-next">
               @@include('../shared/navigationArrow.html')
-            </div>
+            </button>
           </div>
-          <button class="intro__block-button">Подробнее</button>
+          <a href="./about.html" class="intro__block-button">Подробнее</a>
         </div>
       </div>
       <div class="intro__block-right">
