--- a/src/html/sections/plane.html
+++ b/src/html/sections/plane.html
@@ -14,7 +14,7 @@
         <div class="plane__card-icon">
           <img src="./img/plane/quality.png" alt="" />
         </div>
-        <p class="plane__card-heading">Больше чем обслуживание</p>
+        <h3 class="plane__card-heading">Больше чем обслуживание</h3>
         <p class="plane__card-desc">Получите, то чего вы достойны</p>
         <ul class="plane__card-lists">
           <li class="plane__card-list">
@@ -35,7 +35,7 @@
         <div class="plane__card-icon">
           <img src="./img/plane/lanch.png" alt="" />
         </div>
-        <p class="plane__card-heading">Больше чем еда</p>
+        <h3 class="plane__card-heading">Больше чем еда</h3>
         <p class="plane__card-desc">Получите удовольствие от еды</p>
         <ul class="plane__card-lists">
           <li class="plane__card-list">
@@ -56,7 +56,7 @@
         <div class="plane__card-icon">
           <img src="./img/plane/card-plane.png" alt="" />
         </div>
-        <p class="plane__card-heading">Больше чем участник программы Member</p>
+        <h3 class="plane__card-heading">Больше чем участник программы Member</h3>
         <p class="plane__card-desc">Станете нашим партнёром</p>
         <p class="plane__card-info">
           Вместе везде- Visa card Вы тратите, мы собираем- балловая система Летайте и делайте полеты дешевле – набор
