--- a/src/html/pages/about/map.html
+++ b/src/html/pages/about/map.html
@@ -1,7 +1,7 @@
 <section class="map">
   <div class="map__inner container">
     <div class="map__left">
-      <p class="map__heading">Карта полетов</p>
+      <h2 class="map__heading">Карта полетов</h2>
       <p class="map__text">
         Благодаря инновационному сервису и непрерывным финансовым инвестициям компания демонстрирует темпы роста,
         значительно превышающие отраслевые показатели гражданской авиации Узбекистана.
