--- a/src/html/pages/service/tarif.html
+++ b/src/html/pages/service/tarif.html
@@ -1,24 +1,24 @@
 <section class="tarif">
   <div class="tarif__inner container">
-    <h4 class="tarif__heading">Тарифы – возможные тарификации</h4>
+    <h2 class="tarif__heading">Тарифы – возможные тарификации</h2>
     <p class="tarif__text">
       Благодаря инновационному сервису и непрерывным финансовым инвестициям компания демонстрирует темпы роста,
       значительно превышающие отраслевые показатели гражданской авиации Узбекистана.
     </p>
     <a href="./tarif-inner.html" class="tarif__link">Узнать подробнее</a>
-    <div class="tarif__wrapper">
-      <div class="tarif__wrap">
-        <p class="tarif__wrap-heading">Лайт</p>
+    <ul class="tarif__wrapper">
+      <li class="tarif__wrap">
+        <span class="tarif__wrap-heading">Лайт</span>
         <p class="tarif__wrap-text">Багаж не включен, его можно оплатить отдельно</p>
-      </div>
-      <div class="tarif__wrap">
-        <p class="tarif__wrap-heading">эконом</p>
+      </li>
+      <li class="tarif__wrap">
+        <span class="tarif__wrap-heading">эконом</span>
         <p class="tarif__wrap-text">Багаж не включен, его можно оплатить отдельно</p>
-      </div>
-      <div class="tarif__wrap">
-        <p class="tarif__wrap-heading">стандарт</p>
+      </li>
+      <li class="tarif__wrap">
+        <span class="tarif__wrap-heading">стандарт</span>
         <p class="tarif__wrap-text">Багаж не включен, его можно оплатить отдельно</p>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </section>
